--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
   "url": "http://www.megawin-login.pillboxie.com/",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "http://www.megawin-login.pillboxie.com/index.html{search_term_string}megawin, mega win, daftar megawin, login megawin, alternatif megawin, situs megawin, megawin gacor, megawin rtp, megawin terpercaya",
-    "query-input": "required name=search_term_string"
+    "target": "http://www.megawin-login.pillboxie.com/{megawin}"
   }
 }
 </script>
