--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   "url": "http://www.megawin-login.pillboxie.com/",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "http://www.megawin-login.pillboxie.com/{megawin}"
+    "target": "https://www.google.co.id/search?q=megawin{search_term_string}"
   }
 }
 </script>
