--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
   "url": "http://www.megawin-login.pillboxie.com/",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "https://www.google.co.id/search?q=megawin{search_term_string}"
+    "target": "http://www.megawin-login.pillboxie.com/search?q={search_term_string}megawin",
+    "query-input": "required name=search_term_string"
   }
 }
 </script>
